--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,8 +18,16 @@ jobs:
       - name: Checkout Branch
         uses: actions/checkout@v3
 
+      - name: Configurar Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.10
+
       - name: Install requirements
         run: pip install -r requirements.txt -t lib
+
+      - name: Execute tests
+        run:  coverage run -m unittest
 
       - name: Zip depedencies
         run: |
@@ -39,5 +47,5 @@ jobs:
       
       - name: Upload code to AWS
         run: |
-          aws lambda update-function-code --function-name  ${{ env.LAMBDA_NAME }} --zip-file fileb://deploy.zip
+          aws lambda update-function-code --function-name ${{ env.LAMBDA_NAME }} --zip-file fileb://deploy.zip
           echo "Done!"
