--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Configurar Python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.10
+          python-version: 3.x
 
       - name: Install requirements
         run: pip install -r requirements.txt -t lib
