added api url as env variable

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,7 @@ env:
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   AWS_REGION: ${{ vars.AWS_REGION }}
   LAMBDA_NAME: ${{ vars.LAMBDA_NAME }}
+  API_URL: ${{ vars.API_URL }}
 
 jobs:
   deploy_lambda:
